# music-ai-reading-group

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  similar-papers.md  svelte.config.js
DDSP/: ddsp_from_sratch.py  pyproject.toml
docs/: index.html  papers.html  posts.html  sessions.html
docs-legacy/: index.html
docs/_app/: version.json
docs/posts/: audio-language-models.html  audio-representations.html  ddsp-from-scratch.html  hci-live-music-agents.html  llm-audio-effects.html  music-generation.html  music-transcription.html  real-time-ai-music.html
docs/slides/: real-time-ai-music.excalidraw
experiments/aria-duet/: .gitignore  CHANGES.md  README.md  RESEARCH-NOTES.md  config.example.sh  config.sh  faithful_headless_demo.py  list-midi-ports.py  pick-midi-port.py  run-demo-faithful-headless.sh  run-demo-file.sh  run-demo-live.sh  run-fluidsynth.sh  run-playback-only.sh  send-live-smoke-midi.py  setup.sh  sweep.sh  sweep_generate.py  test_batched_cfg.py  test_cfg_gen.py  test_chunked_gen.py  test_conditioned_gen.py  test_demo_generation.py
experiments/ddsp/: .gitignore  README.md  ddsp_from_sratch.py
experiments/transcription/: nmp_from_scratch.py  pyproject.toml
experiments/vampnet/: .gitignore  README.md  dac_experiments.py  pyproject.toml  setup.sh  vampnet_experiments.py
scripts/: new-post.sh
scripts/reading_group/: ailive_mixer_content.py  build_ailive_mixer_package.py  build_audio_language_models_deck.py  excalidraw_image_helper.py
src/: app.css  app.html
src/posts/: attention-is-all-you-need.svx  audio-language-models.svx  (+7 more)
(+269 files in other folders)
